tests/ui/imports/local-modularized-tricky-fail-2.stderr
error: macro-expanded `macro_export` macros from the current crate cannot be referred to by absolute paths
  --> $DIR/local-modularized-tricky-fail-2.rs:13:9
   |
LL |     use exported;
   |         ^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #52234 <https://github.com/rust-lang/rust/issues/52234>
note: the macro is defined here
  --> $DIR/local-modularized-tricky-fail-2.rs:5:5
   |
LL | /  macro_rules! define_exported { () => {
LL | |      #[macro_export]
LL | |/     macro_rules! exported {
LL | ||         () => ()
LL | ||     }
   | ||_____^
LL | |  }}
   | |___- in this expansion of `define_exported!`
LL |
LL |    define_exported!();
   |    ------------------ in this macro invocation
   = note: `#[deny(macro_expanded_macro_exports_accessed_by_absolute_paths)]` on by default

error: macro-expanded `macro_export` macros from the current crate cannot be referred to by absolute paths
  --> $DIR/local-modularized-tricky-fail-2.rs:19:5
   |
LL |     ::exported!();
   |     ^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #52234 <https://github.com/rust-lang/rust/issues/52234>
note: the macro is defined here
  --> $DIR/local-modularized-tricky-fail-2.rs:5:5
   |
LL | /  macro_rules! define_exported { () => {
LL | |      #[macro_export]
LL | |/     macro_rules! exported {
LL | ||         () => ()
LL | ||     }
   | ||_____^
LL | |  }}
   | |___- in this expansion of `define_exported!`
LL |
LL |    define_exported!();
   |    ------------------ in this macro invocation

error: aborting due to 2 previous errors

